@@ -29,6 +29,10 @@ DEFAULTMODE 3;4;0;1;2;3;
 # Set number of extra window/s in the master area(defaults to 0)
 # must end in semicolon
 NMASTER 0;0;1;0;2;0;
+# Minimum width and height for a window in
+# stacking mode.
+#MINW_W 30
+#MINW_H 30
 # Useless gaps for the tiling modes in pixels
 # UG_OUT is distance screen edge to window, UG_IN is for between windows
 # UG_BAR is space around the bar
