@@ -133,8 +133,10 @@ static void buttonpress(XEvent *e);
 static void buttonrelease(XEvent *e);
 static void change_desktop(const Arg arg);
 static int check_dock(Window w);
+static void check_start();
 static void client_to_desktop(const Arg arg);
 static void configurerequest(XEvent *e);
+static void cull_windows(Window *windows, unsigned int cnt);
 static void destroynotify(XEvent *e);
 static void draw_desk(Window win, unsigned int barcolor, unsigned int gc, unsigned int x, char *string, unsigned int len);
 static void draw_text(Window win, unsigned int gc, unsigned int x, char *string, unsigned int len);
@@ -153,9 +155,10 @@ static void kill_client_now(Window w);
 static void last_desktop();
 static void last_win();
 static void leavenotify(XEvent *e);
-static void logger(const char* e);
+static void logger(const char* e, const char* ee);
 static void mapbar();
 static void maprequest(XEvent *e);
+static void map_window(Window neww);
 static void motionnotify(XEvent *e);
 static void more_master(const Arg arg);
 static void move_down(const Arg arg);
@@ -217,7 +220,7 @@ static unsigned int sb_desks;        // width of the desktop switcher
 static unsigned int sb_height, sb_width, screen, show_bar, has_bar, wnamebg, barmon, barmonchange, lessbar;
 static unsigned int showopen;        // whether the desktop switcher shows number of open windows
 static unsigned int topbar, top_stack, windownamelength, keycount, cmdcount, dtcount, pcount, tcount, LA_WINDOWNAME;
-static unsigned int ug_out, ug_in, ug_bar;
+static unsigned int minww, minwh, ug_out, ug_in, ug_bar;
 static int ufalpha, baralpha;
 static unsigned long opacity, baropacity;
 static int xerror(Display *dis, XErrorEvent *ee);
@@ -230,7 +233,7 @@ static char font_list[256], buffer[256], dummy[256];
 static char RC_FILE[100], KEY_FILE[100], APPS_FILE[100];
 static char winname[101];
 static Atom alphaatom, wm_delete_window, protos, *protocols, dockatom, typeatom;
-static XWindowAttributes attr;
+static XWindowAttributes mattr; // For motionnotify events
 static XButtonEvent starter;
 static Arg barrtclkarg;
 
@@ -274,10 +277,12 @@ void add_window(Window win, int tw, client *cl, int x, int y, int w, int h) {
     if(cl != NULL) c = cl;
     else {
         if(!(c = (client *)calloc(1,sizeof(client)))) {
-            logger("\033[0;31mError calloc!");
+            logger("\033[0;31mError calloc!", "");
             exit(1);
         }
-        c->x = x;
+        if(desktops[current_desktop].x > 0 && x > desktops[current_desktop].x)
+            c->x = x - desktops[current_desktop].x;
+        else c->x = x;
         if(topbar == 0 && y < sb_height+4+bdw+ug_bar) c->y = sb_height+4+bdw+ug_bar;
         else c->y = y;
         c->w = w;
@@ -384,7 +389,7 @@ void next_win() {
     save_desktop(current_desktop);
     if(mode == 1) {
         tile();
-        if(c->trans == 0 && focus->trans == 0) XUnmapWindow(dis, c->win);
+        if(c->trans == 0 && focus->trans == 0) XMoveWindow(dis,c->win,c->x,2*desktops[DESKTOPS-1].h);
     }
     update_current();
 }
@@ -404,7 +409,7 @@ void prev_win() {
     save_desktop(current_desktop);
     if(mode == 1) {
         tile();
-        if(d->trans == 0 && focus->trans == 0) XUnmapWindow(dis, d->win);
+        if(d->trans == 0 && focus->trans == 0) XMoveWindow(dis,d->win,d->x,2*desktops[DESKTOPS-1].h);
     }
     update_current();
 }
@@ -506,12 +511,12 @@ void pop_window() {
         }
         tile();
     } else {
-        Window win = (current == NULL) ? 0:current->win;
+        c = current;
         focus->trans = 0;
         numwins += 1;
         current = focus;
         tile();
-        if(mode == 1 && numwins > 1) XUnmapWindow(dis, win);
+        if(mode == 1 && numwins > 1) XMoveWindow(dis,c->win,c->x,2*desktops[DESKTOPS-1].h);
     }
     update_current();
 }
@@ -566,7 +571,7 @@ void unsticky_win() {
     }
     if(stickied == 0) return;
     client *c = focus;
-    XUnmapWindow(dis, c->win);
+    XMoveWindow(dis,c->win,c->x,2*desktops[DESKTOPS-1].h);
     remove_client(c, 0);
     if(focus != NULL) {
         if(mode != 4) tile();
@@ -600,9 +605,12 @@ void change_desktop(const Arg arg) {
     if(arg.i != view[next_view].cd) {
         select_desktop(view[next_view].cd);
         // Unmap all window
-        if(head != NULL)
-            for(c=head;c;c=c->next)
-                XUnmapWindow(dis,c->win);
+        if(head != NULL) {
+            for(c=head;c;c=c->next) {
+                XMoveWindow(dis,c->win,c->x,2*desktops[DESKTOPS-1].h);
+            }
+            XFlush(dis);
+        }
     }
 
     // Take "properties" from the new desktop
@@ -612,9 +620,8 @@ void change_desktop(const Arg arg) {
     if(head != NULL) {
         for(c=head;c;c=c->next)
             if(c->trans == 1) {
-                XMoveResizeWindow(dis,c->win,desktops[current_desktop].x+c->x,desktops[current_desktop].y+c->y,c->w,c->h);
-                XMapWindow(dis,c->win);
-            } else if(mode != 1) XMapWindow(dis,c->win);
+                XMoveResizeWindow(dis,c->win,desktops[current_desktop].x+c->x,c->y,c->w,c->h);
+            }
         tile();
     }
 
@@ -663,7 +670,7 @@ void client_to_desktop(const Arg arg) {
     // Remove client from current desktop
     if(stickied == 1) unsticky_win();
     else {
-        XUnmapWindow(dis, c->win);
+        XMoveWindow(dis,c->win,c->x,2*desktops[DESKTOPS-1].h);
         remove_client(c, 1);
         if(mode != 4) tile();
 
@@ -676,8 +683,9 @@ void client_to_desktop(const Arg arg) {
           desktops[current_desktop].x+c->x,c->y,c->w,c->h);
         for(j=cd;j<cd+num_screens;++j) {
             if(view[j%num_screens].cd == arg.i) {
-                if(c->trans == 0) tile();
-                XMapWindow(dis, c->win);
+                if(c->trans == 0) {
+                    tile();
+                }
             }
         }
         select_desktop(tmp2);
@@ -744,7 +752,6 @@ void tile() {
         for(c=head;c;c=c->next)
             if(c->trans == 0) {
                 XMoveResizeWindow(dis,c->win,scrx+ug_out,scry+y+ug_out,sw+bdw-2*ug_out,sh+bdw-2*ug_out);
-                if(mode == 1) XMapWindow(dis, c->win);
             }
     } else {
         switch(mode) {
@@ -774,7 +781,6 @@ void tile() {
                 break;
             case 1: /* Fullscreen */
                 XMoveResizeWindow(dis,current->win,scrx,scry+y,sw+bdw,sh+bdw);
-                XMapWindow(dis, current->win);
                 break;
             case 2: /* Horizontal */
             	// Master window
@@ -922,18 +928,13 @@ void switch_mode(const Arg arg) {
 
     client *c;
     growth = 0;
-    if(mode == 1 && head != NULL) {
-        XUnmapWindow(dis, current->win);
-        for(c=head;c;c=c->next)
-            XMapWindow(dis, c->win);
-    }
 
     mode = arg.i;
     master_size = (mode == 2) ? (sh*msize)/100 : (sw*msize)/100;
     if(mode == 1 && head != NULL)
         for(c=head;c;c=c->next) {
-            if(c->trans == 1) continue;
-            XUnmapWindow(dis, c->win);
+            if(c->trans == 1 || c == current) continue;
+            XMoveWindow(dis,c->win,c->x,2*desktops[DESKTOPS-1].h);
         }
 
     save_desktop(current_desktop);
@@ -1021,6 +1022,7 @@ void grabkeys() {
 void warp_pointer() {
     // Move cursor to the center of the current window
     if(followmouse != 0) return;
+    XWindowAttributes attr;
     if(dowarp < 1 && current != NULL) {
         XGetWindowAttributes(dis, current->win, &attr);
         XWarpPointer(dis, None, current->win, 0, 0, 0, 0, attr.width/2, attr.height/2);
@@ -1044,7 +1046,7 @@ int check_dock(Window w) {
             for(j=0; j<count; j++)
                 if(type[j] == dockatom) ret = 0;
         }
-        XFree(temp);
+        if(temp) XFree(temp);
     }
     return ret;
 }
@@ -1054,7 +1056,7 @@ void kill_client() {
     Window w = focus->win;
     kill_client_now(w);
     if(w) return;
-    remove_client(focus, 0);
+    if(focus != NULL) remove_client(focus, 0);
     update_current();
     if(STATUS_BAR == 0) update_bar();
 }
@@ -1076,7 +1078,7 @@ void kill_client_now(Window w) {
             }
         }
     } else XKillClient(dis, w);
-    XFree(protocols);
+    if(protocols) XFree(protocols);
 }
 
 void quit() {
@@ -1095,7 +1097,7 @@ void quit() {
     XFreePixmap(dis, area_sb);
     XSync(dis, False);
     XSetInputFocus(dis, root, RevertToPointerRoot, CurrentTime);
-    logger("\033[0;34mYou Quit : Bye!");
+    logger("\033[0;34mYou Quit : Bye!", "");
     if(shutting_down > 0) return;
     else bool_quit = 1;
 }
@@ -1106,7 +1108,7 @@ unsigned long getcolor(const char* color) {
 
     if(XAllocNamedColor(dis,map,color,&c,&c)) return c.pixel;
     else {
-        logger("\033[0;31mError parsing color!");
+        logger("\033[0;31mError parsing color!", "");
         return 1;
     }
     
@@ -1133,7 +1135,7 @@ void terminate(const Arg arg) {
                 ++j;
             }
             a.com[j] = NULL;
-            logger(msg);
+            logger(msg, "");
             bool_quit = 1;
             spawn(a);
             //execvp((char*)a.com[0],(char**)a.com);
@@ -1141,9 +1143,41 @@ void terminate(const Arg arg) {
     }
 }
 
-void logger(const char* e) {
-    fprintf(stderr,"\n\033[0;34m:: snapwm : %s \033[0;m\n", e);
+void logger(const char* e, const char* ee) {
+    fprintf(stderr,"\n\033[0;34m:: snapwm : %s \033[0;m  %s\n", e, ee);
     fflush(stderr);
+}
+
+void cull_windows(Window *windows, unsigned int cnt) {
+  unsigned int i;
+  XWindowAttributes attr;
+
+  for(i=0;i<cnt;++i) {
+      if(XGetWindowAttributes(dis, windows[i], &attr) == 0) {
+          windows[i] = None;
+          continue;
+      }
+      if(attr.map_state != IsViewable || attr.override_redirect == True
+        || attr.class == InputOnly){
+          windows[i] = None;
+          continue;
+      }
+  }
+}
+
+void check_start() {
+    unsigned int i, num;
+    Window w1, *tree = NULL;
+
+    if(XQueryTree(dis, root, &w1, &w1, &tree, &num) == 0) return;
+    cull_windows(tree, num);
+    for(i=num;i>0;--i) {
+        if(tree[i-1] != None) {
+            map_window(tree[i-1]);
+        }
+    }
+
+    if(tree) XFree(tree);
 }
 
 void plugnplay(XEvent *e) {
@@ -1158,7 +1192,7 @@ void plugnplay(XEvent *e) {
     XFreePixmap(dis, area_sb);
     for(i=0;i<num_screens;++i) {
         select_desktop(view[i].cd);
-        for(c=head;c;c=c->next) XUnmapWindow(dis, c->win);
+        for(c=head;c;c=c->next) XMoveWindow(dis,c->win,c->x,2*desktops[DESKTOPS-1].h);
     }
     select_desktop(tmp);
     unmapbar();
@@ -1179,7 +1213,6 @@ void plugnplay(XEvent *e) {
     init_start();
     for(i=0;i<num_screens;++i) {
         select_desktop(view[i].cd);
-        for(c=head;c;c=c->next) XMapWindow(dis, c->win);
         tile();
     }
     Arg a = {.i = tmp};
@@ -1206,7 +1239,7 @@ void init_desks() {
 
     XineramaScreenInfo *info = NULL;
     if(!(info = XineramaQueryScreens(dis, &num_screens))) {
-        logger("XINERAMA Fail");
+        logger("XINERAMA Fail", "");
         num_screens = 1;
         have_Xin = 1;
     }
@@ -1265,12 +1298,12 @@ void setup() {
     resizemovekey = Mod1Mask;
     windownamelength = 35;
     show_bar = STATUS_BAR = barmon = barmonchange = lessbar = 0;
-    ug_out = ug_in = ug_bar = 0;
+    minww = minwh = ug_out = ug_in = ug_bar = 0;
 
     char *loc;
     loc = setlocale(LC_ALL, "");
     if (!loc || !strcmp(loc, "C") || !strcmp(loc, "POSIX") || !XSupportsLocale())
-        logger("LOCALE FAILED");
+        logger("LOCALE FAILED", "");
     // Read in RC_FILE
     sprintf(RC_FILE, "%s/.config/snapwm/rc.conf", getenv("HOME"));
     sprintf(KEY_FILE, "%s/.config/snapwm/key.conf", getenv("HOME"));
@@ -1302,15 +1335,16 @@ void setup() {
         change_desktop(a);
     }
     init_start();
+    check_start();
     update_current();
     setbaralpha();
 
-    logger("\033[0;32mWe're up and running!");
+    logger("\033[0;32mWe're up and running!", "");
 }
 
 void sigchld(int unused) {
     if(signal(SIGCHLD, sigchld) == SIG_ERR) {
-        logger("\033[0;31mCan't install SIGCHLD handler");
+        logger("\033[0;31mCan't install SIGCHLD handler", "");
         exit(1);
         }
     while(0 < waitpid(-1, NULL, WNOHANG));
@@ -1341,7 +1375,7 @@ void start() {
 int main() {
     // Open display
     if(!(dis = XOpenDisplay(NULL))) {
-        logger("\033[0;31mCannot open display!");
+        logger("\033[0;31mCannot open display!", "");
         exit(1);
     }
 
